--- a/index.html
+++ b/index.html
@@ -1,142 +1,165 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <!-- ===============================================-->
-    <!--    Document Title-->
-    <!-- ===============================================-->
-    <title>E-Muhafiz</title>
+  <!-- ===============================================-->
+  <!--    Document Title-->
+  <!-- ===============================================-->
+  <title>E-Muhafiz - Car Number Plate Recognition System - ANPR</title>
 
 
-    <!-- ===============================================-->
-    <!--    Favicons-->
-    <!-- ===============================================-->
-    <meta name="theme-color" content="#ffffff">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="E-Muhafiz">
-    <meta name="description" property="og:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
-    <meta property="og:image" content="https://emuhafiz.com/assets/img/logo_social.png">
-    <meta property="og:url" content="https://emuhafiz.com/index.html">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="E-Muhafiz">
-    <meta name="twitter:description" content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc.">
-    <meta name="twitter:image" content="https://emuhafiz.com/assets/img/logo_social.png">
-    <meta property="og:site_name" content="E-Muhafiz">
-    <meta name="twitter:image:alt" content="E-Muhafiz">
+  <!-- ===============================================-->
+  <!--    Favicons-->
+  <!-- ===============================================-->
+  <meta name="theme-color" content="#ffffff">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="E-Muhafiz">
+  <meta name="description" property="og:description"
+    content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc. ">
+  <meta property="og:image" content="https://emuhafiz.com/assets/img/logo_social.png">
+  <meta property="og:url" content="https://emuhafiz.com/index.html">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="E-Muhafiz">
+  <meta name="twitter:description"
+    content="E-Muhafiz is an AI based solution that automatically read Vehicle number plates and CNIC using CCTV cameras. E-Muhafiz is designed to keep record of vehicles entering or exiting from a checkpoint. E-Muhafiz is best for shopping Malls, gated societies and etc.">
+  <meta name="twitter:image" content="https://emuhafiz.com/assets/img/logo_social.png">
+  <meta property="og:site_name" content="E-Muhafiz">
+  <meta name="twitter:image:alt" content="E-Muhafiz">
+  <meta name="keywords" content=" Number Plate Recognition, Automatic Number Plate Recognition, ANPR" />
 
 
-    <!-- ===============================================-->
-    <!--    Stylesheets-->
-    <!-- ===============================================-->
-    <link href="assets/css/theme.css" rel="stylesheet" />
-    <link href="assets/css/muhafiz.css" rel="stylesheet" />
+  <!-- ===============================================-->
+  <!--    Stylesheets-->
+  <!-- ===============================================-->
+  <link href="assets/css/theme.css" rel="stylesheet" />
+  <link href="assets/css/muhafiz.css" rel="stylesheet" />
 
-  </head>
+</head>
 
 
-  <body>
+<body>
 
-    <!-- ===============================================-->
-    <!--    Main Content-->
-    <!-- ===============================================-->
-    <main class="main" id="top">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
-        <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/icons/logo.png" alt="" />&nbsp;</a>
-          <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="teasers.html">More Teasers</a></li>
-              <li class="nav-item"><a class="nav-link" href="privacy_policy.html">Privacy Policy</a></li>
+  <!-- ===============================================-->
+  <!--    Main Content-->
+  <!-- ===============================================-->
+  <main class="main" id="top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
+      <div class="container"><a class="navbar-brand" href="index.html"><img src="assets/img/icons/logo.png"
+            alt="" />&nbsp;</a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="teasers.html">More Teasers</a></li>
+            <li class="nav-item"><a class="nav-link" href="privacy_policy.html">Privacy Policy</a></li>
+          </ul>
+          <form class="d-flex py-3 py-lg-0">
+            <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a Demo</a>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+
+    <!-- ============================================-->
+    <!-- <section> begin ============================-->
+    <section class="pb-6">
+
+      <div class="container">
+        <dv class="row">
+          <h1>Car Number Plate Recognition System</h1>
+          <p style="text-align: justify;">
+            <b>Automatic Number Plate Recognition (ANPR)</b> is the ability to automatically recognize the symbols
+            contained in the number plates of a motor vehicle when read from an image provided by video surveillance
+            cameras for the purposes of further processing by a security system.&nbsp;
+          </p>
+        </dv>
+        <div class="row">
+          <dv class="col-12">
+            <video controls autoplay muted style="margin: 0 auto; width: 70%; display: block;">
+              <source
+                src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-1/e-muhafiz_how_it_works.mp4"
+                type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </dv>
+        </div>
+        <div class="row">
+          <dv class="col-12 text-center" style="padding: 30px;">
+            <a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="request_a_demo.html">Request a Demo</a>
+          </dv>
+        </div>
+      </div><!-- end of .container-->
+
+    </section>
+    <!-- <section> close ============================-->
+    <!-- ============================================-->
+
+
+    <!-- ============================================-->
+    <!-- <section> begin ============================-->
+    <section class="bg-200 pt-9 pb-0">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-4 mb-3">
+            <ul class="list-unstyled list-inline">
+              <li class="list-inline-item"><a class="text-decoration-none"
+                  href="https://www.linkedin.com/company/e-muhafiz" target="_blank">
+                  <svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#387BF5"
+                    viewBox="0 0 24 24">
+                    <path
+                      d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
+                  </svg></a></li>
             </ul>
-            <form class="d-flex py-3 py-lg-0">
-              <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a Demo</a>
-            </form>
+            <p class="text-400 my-3">&copy; 2021 E-Muhafiz, Made in 🇵🇰</p>
           </div>
         </div>
-      </nav>
+      </div><!-- end of .container-->
+    </section>
+    <!-- <section> close ============================-->
+    <!-- ============================================-->
 
 
-      <!-- ============================================-->
-      <!-- <section> begin ============================-->
-      <section class="pb-6">
-
-        <div class="container">
-          <div class="row">
-            <dv class="col-12">
-              <video controls autoplay muted style="margin: 0 auto; width: 70%; display: block;">
-                <source src="https://github.com/maxpaynestory/movie-talk/releases/download/videos-version-1/e-muhafiz_how_it_works.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
-            </dv>  
-          </div>
-          <div class="row">
-            <dv class="col-12 text-center" style="padding: 30px;">
-              <a class="btn btn-lg btn-danger hover-top btn-glow text-end" href="request_a_demo.html">Request a Demo</a>
-            </dv>
-          </div>
-        </div><!-- end of .container-->
-
-      </section>
-      <!-- <section> close ============================-->
-      <!-- ============================================-->
-
-
-      <!-- ============================================-->
-      <!-- <section> begin ============================-->
-      <section class="bg-200 pt-9 pb-0">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-lg-4 mb-3">
-              <ul class="list-unstyled list-inline">
-                <li class="list-inline-item"><a class="text-decoration-none" href="https://www.linkedin.com/company/e-muhafiz" target="_blank">
-                    <svg class="bi bi-facebook" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#387BF5" viewBox="0 0 24 24">
-                      <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
-                    </svg></a></li>
-              </ul>
-              <p class="text-400 my-3">&copy; 2021 E-Muhafiz, Made in 🇵🇰</p>
-            </div>
-          </div>
-        </div><!-- end of .container-->
-      </section>
-      <!-- <section> close ============================-->
-      <!-- ============================================-->
-
-
-    </main>
-    <!-- ===============================================-->
-    <!--    End of Main Content-->
-    <!-- ===============================================-->
+  </main>
+  <!-- ===============================================-->
+  <!--    End of Main Content-->
+  <!-- ===============================================-->
 
 
 
 
-    <!-- ===============================================-->
-    <!--    JavaScripts-->
-    <!-- ===============================================-->
-    <script src="vendors/@popperjs/popper.min.js"></script>
-    <script src="vendors/bootstrap/bootstrap.min.js"></script>
-    <script src="vendors/is/is.min.js"></script>
-    <script src="//polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
-    <script src="assets/js/theme.js"></script>
-    <!-- Google Analytics -->
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <!-- ===============================================-->
+  <!--    JavaScripts-->
+  <!-- ===============================================-->
+  <script src="vendors/@popperjs/popper.min.js"></script>
+  <script src="vendors/bootstrap/bootstrap.min.js"></script>
+  <script src="vendors/is/is.min.js"></script>
+  <script src="//polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
+  <script src="assets/js/theme.js"></script>
+  <!-- Google Analytics -->
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-36922495-2', 'auto');
     ga('send', 'pageview');
-    </script>
-    <!-- End Google Analytics -->
+  </script>
+  <!-- End Google Analytics -->
 
-    <link href="//fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
-  </body>
+  <link
+    href="//fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+    rel="stylesheet">
+</body>
 
 </html>
