--- a/index.html
+++ b/index.html
@@ -51,10 +51,15 @@
     <!--    Main Content-->
     <!-- ===============================================-->
     <main class="main" id="top">
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <a class="navbar-brand" href="index.html"><img src="assets/img/icons/logo.png" alt="" />&nbsp;</a>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
@@ -78,11 +83,24 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <article>E-Muhafiz is a software which use normal cctv cameras to automatically record number plate of any incoming car. E-Muhafiz is perfect for places where you have a gate/barrier with cctv cameras.</article>
+                        <article>E-Muhafiz is a software which use normal cctv cameras to automatically record number
+                            plate of any incoming car. E-Muhafiz is perfect for places where you have a gate/barrier
+                            with cctv cameras.</article>
                         <br>
-                        <article><h2>For Shopping Malls</h2> When we visit places like Lahore Airport, Emporium, Packages Mall, Imtiaz etc one would notice that they issue a parking receipt with manually written number plate. E-Muhafiz is capable of issuing parking receipts alongwith number plate without any human involvement.</article>
+                        <article>
+                            <h2>For Shopping Malls</h2> When we visit places like Lahore Airport, Emporium, Packages
+                            Mall, Imtiaz etc one would notice that they issue a parking receipt with manually written
+                            number plate. E-Muhafiz is capable of issuing parking receipts alongwith number plate
+                            without any human involvement.
+                        </article>
                         <br>
-                        <article><h2>For Housing Societies</h2> E-Muhafiz is a software designed according to the needs of a housing society. It keeps record of all incoming cars using cctv camera. No paper or manual writing is required at the entry points. If CNIC is a requirement for entry of a car we could also add this capability inside E-Muhafiz and then E-Muhafiz will be able to read and store CNIC data of a car driver.</article>
+                        <article>
+                            <h2>For Housing Societies</h2> E-Muhafiz is a software designed according to the needs of a
+                            housing society. It keeps record of all incoming cars using cctv camera. No paper or manual
+                            writing is required at the entry points. If CNIC is a requirement for entry of a car we
+                            could also add this capability inside E-Muhafiz and then E-Muhafiz will be able to read and
+                            store CNIC data of a car driver.
+                        </article>
                     </div>
                     <div class="col">
                         <div class="row">
@@ -107,7 +125,7 @@
                         <div class="row">
                             <dv class="col text-center" style="padding: 20px;">
                                 <a class="btn btn-sm btn-danger hover-top btn-glow text-end btn-green"
-                                   href="https://api.whatsapp.com/send?phone=923040916691">WHATSAPP</a>
+                                    href="https://api.whatsapp.com/send?phone=923040916691">WHATSAPP</a>
                             </dv>
                         </div>
                     </div>
