--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -40,17 +40,21 @@
   <!--    Main Content-->
   <!-- ===============================================-->
   <main class="main" id="top">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <a class="navbar-brand" href="index.html"><img src="assets/img/icons/logo.png" alt="" />&nbsp;</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="teasers.html">More Teasers</a></li>
             <li class="nav-item"><a class="nav-link" href="smart_cctv_camera.html">smart CCTV camera</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="privacy_policy.html">Privacy Policy</a></li>
+            <li class="nav-item"><a class="nav-link active" href="privacy_policy.html">Privacy Policy</a></li>
           </ul>
           <form class="d-flex py-3 py-lg-0">
             <a class="btn btn-outline-danger rounded-pill order-0" href="request_a_demo.html">Request a
