--- a/teasers.html
+++ b/teasers.html
@@ -10,7 +10,7 @@
   <!-- ===============================================-->
   <!--    Document Title-->
   <!-- ===============================================-->
-  <title>number plate reading software | vehicle entry/exit software  | E-Muhafiz</title>
+  <title>number plate reading software | vehicle entry/exit software | E-Muhafiz</title>
   <!-- Search Engine -->
   <meta name="description"
     content="E-Muhafiz is an AI based car parking system for Pakistan which supports integrated Plate Recognition (LPR).">
@@ -73,14 +73,18 @@
   <!--    Main Content-->
   <!-- ===============================================-->
   <main class="main" id="top">
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" data-navbar-on-scroll="data-navbar-on-scroll">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
+          aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <a class="navbar-brand" href="index.html"><img src="assets/img/icons/logo.png" alt="" />&nbsp;</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mx-auto border-bottom border-lg-bottom-0 pt-2 pt-lg-0">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="teasers.html">More Teasers</a></li>
+            <li class="nav-item"><a class="nav-link active" href="teasers.html">More Teasers</a></li>
             <li class="nav-item"><a class="nav-link" href="smart_cctv_camera.html">smart CCTV camera</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="privacy_policy.html">Privacy Policy</a></li>
@@ -134,7 +138,7 @@
         <div class="row">
           <dv class="col text-center" style="padding: 20px;">
             <a class="btn btn-sm btn-danger hover-top btn-glow text-end btn-green"
-               href="https://api.whatsapp.com/send?phone=923040916691">WHATSAPP</a>
+              href="https://api.whatsapp.com/send?phone=923040916691">WHATSAPP</a>
           </dv>
         </div>
       </div><!-- end of .container-->
